k8s/overlays/staging/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal
spec:
  host: staging.appcarrier.cloud
